--- a/views/blog.jade
+++ b/views/blog.jade
@@ -7,9 +7,9 @@ block content
     #display
       include userbar
 
-      h1 #{title.toUpperCase()}
-      P #{content}
-      p end
+      h2 #{title.toUpperCase()}
+      #content
+        P #{content}
 
      #footer
      include footer
