--- a/views/blogs.jade
+++ b/views/blogs.jade
@@ -6,10 +6,11 @@ block content
       img(src='/images/logo.png')
     #display
       include userbar
-
-      -for (var id in blogs)
-        -var blog = blogs[id]
-        div
-          a(href='/blog/#{id}') #{blog.title}
+    article.content
+      ul.listing
+        -for (var id in blogs)
+          -var blog = blogs[id]
+          li.listing-item
+            a(href='/blog/#{id}') #{blog.title}
 
     include footer
